--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Efecto de Escritura de Código</title>
+    <title>Profeteus Access</title>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:300' rel='stylesheet' type='text/css'>
@@ -50,8 +50,8 @@
         .logo-container img {
             max-width: 400px;
             height: auto;
-            filter: drop-shadow(0 0 30px rgba(237, 27, 52, 0.8))
-                    drop-shadow(0 0 60px rgba(237, 27, 52, 0.6));
+            filter: drop-shadow(0 0 20px rgba(237, 27, 52, 0.5))
+                    drop-shadow(0 0 40px rgba(237, 27, 52, 0.3));
             animation: glitch 3s infinite;
         }
 
@@ -71,13 +71,13 @@
 
         @keyframes glowPulse {
             0%, 100% {
-                filter: drop-shadow(0 0 30px rgba(237, 27, 52, 0.8))
-                        drop-shadow(0 0 60px rgba(237, 27, 52, 0.6));
+                filter: drop-shadow(0 0 20px rgba(237, 27, 52, 0.5))
+                        drop-shadow(0 0 40px rgba(237, 27, 52, 0.3));
             }
             50% {
-                filter: drop-shadow(0 0 50px rgba(237, 27, 52, 1))
-                        drop-shadow(0 0 100px rgba(237, 27, 52, 0.8))
-                        drop-shadow(0 0 150px rgba(237, 27, 52, 0.4));
+                filter: drop-shadow(0 0 30px rgba(237, 27, 52, 0.7))
+                        drop-shadow(0 0 60px rgba(237, 27, 52, 0.5))
+                        drop-shadow(0 0 90px rgba(237, 27, 52, 0.3));
             }
         }
 
